--- a/css/login.css
+++ b/css/login.css
@@ -1,10 +1,10 @@
 .login-form {
+    align-items: center;
     display: flex;
     flex-direction: column;
     height: 100vh;
     justify-content:center;
-    background-color: black;
-    color:aliceblue;
+    color:black;
 }
 
 .login_header {
@@ -15,3 +15,42 @@
     margin-bottom: 50px;
 }
 
+
+.login.header img {
+    width: 100%;  
+}
+
+.login_header h1 {
+    color: black;
+    font-size: 3rem;
+}
+
+.login_input {
+    border: 2px solid;
+    border-radius: 8px;
+    color: black;
+    font-size: 1em;
+    margin-bottom: 15px;
+    max-width: 300px;
+    width: 100%;
+    outline: none;
+    padding: 15px;
+    width: 100%;
+}
+
+.login_button {
+    background-color: #ee665c;
+    border-radius: 8px;
+    color: white;
+    padding: 15px;
+    width: 100%;
+    cursor: pointer;
+    font-size: 1em;
+    max-width: 300px;
+}
+
+.login_button:disabled {
+   background-color: #eee;
+   color: #aaa;
+   cursor: auto;
+}
