--- a/css/game.css
+++ b/css/game.css
@@ -1,20 +1,45 @@
+main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-image: url('../imagens/back.png');
+    background-size: cover;
+    min-width: 10vh;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 20px 50px;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(255, 255, 255,0.8);
+    font-size: 1.2em;
+    width: 100%;
+    max-width: 800px;
+    padding: 30px;
+    margin: 0 0 30px;
+    border-radius: 5px;
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 15px;
     width: 100%;
     max-width: 800px;
-    margin: 100px auto;
+    margin: 0 auto;
 }
 
 .card {
     aspect-ratio: 3/4;
     width: 100%;
-    background-color: black;
     border-radius: 5px;
     position: relative;
     transition: all 400ms ease;
     transform-style: preserve-3d;
+    background-color: black;
 }
 
 .face {
@@ -24,6 +49,8 @@
     background-size: cover;
     background-position: center;
     border: 2px solid blue;
+    border-radius: 5px;
+    transition: all 400ms e;
 
 }
 
@@ -36,7 +63,11 @@
     backface-visibility: hidden;
 }
 
-.card:hover {
+.reveal-card {
     transform: rotateY(180deg);
+}
 
+.disabled-card {
+    filter: saturate(0);
+    opacity: 0.5;
 }
