--- a/css/game.css
+++ b/css/game.css
@@ -2,7 +2,7 @@ main {
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-image: url('../imagens/back.png');
+    background-image: url('../imagens/plano_fundo1.png');
     background-size: cover;
     min-width: 10vh;
     align-items: center;
@@ -14,7 +14,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(255, 255, 255,0.8);
+    background-color: rgba(255, 255, 255, 0.8);
     font-size: 1.2em;
     width: 100%;
     max-width: 800px;
@@ -51,7 +51,6 @@ header {
     border: 2px solid blue;
     border-radius: 5px;
     transition: all 400ms e;
-
 }
 
 .front {
